# Frytrader

./: .env  .gitattributes  __init__.py  api.py  build.py  build_pyinstaller.py  main.py  models.py  nuitka-crash-report.xml  pyproject.toml  startup.py  trader.py
